# astrophysics-data-engineering-codex

./: .gitignore  AGD_FORWARD_PLAN.md  AGENTS.md  CLAUDE.md  CLAUDE_CODE_CONTEXT.md  LICENSE  README.md  SCIENCE_GOALS.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
notebooks/: combined_probe_constraints.ipynb  euclid_lens_statistics.ipynb
scripts/: ingest_euclid_q1.py  nightly_report.py  run_fink_calibration_replay.py  run_fink_gold_smoke.py  run_fink_silver_smoke.py
src/: __init__.py  exceptions.py
src/agents/: anomaly_agent.py
src/analysis/: __init__.py  calibration.py  constraints.py  cosmology.py  lensing.py
src/crossref/: __init__.py  gaia_client.py  simbad_client.py  tap_proxy.py  utils.py
src/ingestion/: euclid_client.py  fink_api_client.py
src/models/: __init__.py  alerts.py  classification.py  crossref.py  lenses.py
src/processing/: __init__.py  bronze_processor.py  classifier.py  euclid_lens_processor.py  gold_processor.py  silver_processor.py
src/utils/: __init__.py  config.py
tests/: conftest.py
tests/fixtures/calibration/: README.md  ztf_bts_replay_manifest.json
tests/fixtures/euclid/: README.md  mer_q1_sample.json  slde_q1_sample.json
tests/test_agents/: test_anomaly_agent.py
tests/test_analysis/: test_calibration.py  test_cosmology.py  test_lensing.py  test_notebooks.py
tests/test_crossref/: __init__.py  test_gaia_client.py  test_simbad_client.py  test_tap_proxy.py
tests/test_ingestion/: test_euclid_client.py  test_fink_api_client.py
tests/test_processing/: test_bronze_processor.py  test_classifier.py  test_euclid_lens_processor.py  test_gold_processor.py  test_silver_processor.py
tests/test_scripts/: test_ingest_euclid_q1.py  test_nightly_report.py  test_run_fink_calibration_replay.py  test_run_fink_gold_smoke.py  test_run_fink_silver_smoke.py
tests/test_utils/: test_config.py
