[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-galactic-discovery"
version = "0.1.0"
description = "Real-time astronomical transient discovery using agentic AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Parth", email = "parth@example.com" }
]
keywords = [
    "astronomy",
    "transient",
    "ztf",
    "lsst",
    "databricks",
    "ai",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=6.0,<7.0",
    "astroquery>=0.4,<1.0",
    "requests>=2.31,<3.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas>=2.0,<3.0",
    "pyarrow>=14.0,<16.0",
    "anthropic>=0.18,<1.0",
    "structlog>=24.0,<25.0",
    "tenacity>=8.0,<9.0",
]

[project.optional-dependencies]
databricks = [
    "delta-spark>=3.0,<4.0",
    "pyspark>=3.5,<4.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.0,<5.0",
    "great-expectations>=0.18,<1.0",
    "ruff>=0.2,<1.0",
    "black>=24.0,<25.0",
    "mypy>=1.8,<2.0",
    "pre-commit>=3.6,<4.0",
]
all = [
    "agentic-galactic-discovery[databricks,dev]",
]

[project.urls]
Homepage = "https://github.com/parth/agentic-galactic-discovery"
Documentation = "https://github.com/parth/agentic-galactic-discovery#readme"
Repository = "https://github.com/parth/agentic-galactic-discovery"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "astroquery.*",
    "great_expectations.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
